--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
         "yyabuilder": "^1.1.4",
         "@types/chai": "^4.2.19",
         "chai": "^4.3.4",
-        "mocha": "^9.0.2"
+        "mocha": "^9.0.2",
+        "source-map-support": "^0.5.19"
     },
     "bugs": {
         "url": "https://github.com/yuyaryshev/semaphore_for_kids/issues"
