--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "registry": "https://registry.npmjs.org"
     },
     "scripts": {
-        "test": "npm run test_module && jest --config=jest.config-ts.cjs --passWithNoTests --runInBand",
+        "test": "npm run test_module &&  npm run test:cjs_mocha",
         "precompile": "yb precompile && eslint src --fix --quiet",
         "precompile_full": "npm run precompile && prettier src --write",
         "clean:cjs": "yb clean_cjs",
@@ -40,13 +40,13 @@
         "clean": "yb clean_all && npm run clear:docs",
         "clean:ts": "yb clean_ts",
         "build:ts": "npm run clean:ts && tsc",
-        "build": "npm run precompile_full && npm run clean && npm run build:esm && npm run build:cjs && npm run build:types && npm run lint && npm run test && npm run build:docs",
+        "build": "npm run precompile_full && npm run clean && npm run build:esm && npm run build:cjs && npm run build:types && npm run lint && npm run test",
         "test_module": "node cjs_require.test.cjs && node mjs_import.test.mjs && echo ok",
         "test:cjs": "npm run test_module && npm run build:cjs && jest --config=jest.config-cjs.cjs --passWithNoTests --runInBand",
         "test:ts": "npm run test_module && jest --config=jest.config-ts.cjs --passWithNoTests --runInBand",
         "tsc": "npm run build:ts",
         "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-        "republish": "npm run build && npx version-select && yb genprojmeta && npm publish",
+        "republish": "npm run build && npx version-select && yb genprojmeta && yb dir_hash && npm publish && yb commit-tag-push",
         "deps": "echo Finding loops in .js requires... & del deps.png & madge dist -c -i deps.png && deps.png",
         "deps_all": "echo Generating full .js requires tree... & del deps.png & madge dist -i deps.png && deps.png",
         "deps_orphans": "echo Finding orphans .js requires... & del deps.png & madge dist --orphans -i deps.png && deps.png",
