--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "semaphore_for_kids",
     "version": "1.0.0",
     "description": "Semaphore for kids on React + Mobx",
+    "isApp": true,
     "author": "Yuri Yaryshev",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
@@ -59,7 +60,8 @@
         "watch:test:cjs_mocha": "mocha './lib/cjs/**/*.test.js' -w",
         "watch:test:cjs_jest": "jest --config=jest.config-cjs.cjs --passWithNoTests --runInBand -w",
         "test:cjs_jest": "npm run test_module && npm run build:cjs && jest --config=jest.config-cjs.cjs --passWithNoTests --runInBand",
-        "test:cjs_mocha": "npm run test_module && npm run build:cjs && mocha './lib/cjs/**/*.test.js'"
+        "test:cjs_mocha": "npm run test_module && npm run build:cjs && mocha './lib/cjs/**/*.test.js'",
+        "nodemon:backend": "nodemon -w ./lib/cjs/server ./lib/cjs/server/start.js"
     },
     "devDependencies": {
         "@babel/cli": "7.15.7",
